crates/layout/tests/snapshots/box_tree_goldens__nested_divs_with_margins.snap
---
source: crates/layout/tests/box_tree_goldens.rs
expression: "dump(include_str!(\"../../style/tests/golden/nested-divs.html\"))"
---
#boxtree
| Block node=2
|   display: block
|   position: static
|   width: auto
|   height: auto
|   min-width: auto
|   max-width: none
|   min-height: auto
|   max-height: none
|   margin: 0px 0px 0px 0px
|   padding: 0px 0px 0px 0px
|   border-width: 0px 0px 0px 0px
|   border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|   border-solid: false false false false
|   box-sizing: content-box
|   overflow: visible
|   offset: auto auto auto auto
|   color: rgba(0, 0, 0, 255)
|   background: rgba(0, 0, 0, 0)
|   font-family: sans-serif
|   font-size: 16px
|   font-weight: 400
|   font-italic: false
|   line-height: 19.2px
|   text-align: left
|   white-space: normal
|   AnonymousBlock
|     display: block
|     position: static
|     width: auto
|     height: auto
|     min-width: auto
|     max-width: none
|     min-height: auto
|     max-height: none
|     margin: 0px 0px 0px 0px
|     padding: 0px 0px 0px 0px
|     border-width: 0px 0px 0px 0px
|     border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|     border-solid: false false false false
|     box-sizing: content-box
|     overflow: visible
|     offset: auto auto auto auto
|     color: rgba(0, 0, 0, 255)
|     background: rgba(0, 0, 0, 0)
|     font-family: sans-serif
|     font-size: 16px
|     font-weight: 400
|     font-italic: false
|     line-height: 19.2px
|     text-align: left
|     white-space: normal
|     InlineText node=8
|       display: block
|       position: static
|       width: auto
|       height: auto
|       min-width: auto
|       max-width: none
|       min-height: auto
|       max-height: none
|       margin: 0px 0px 0px 0px
|       padding: 0px 0px 0px 0px
|       border-width: 0px 0px 0px 0px
|       border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|       border-solid: false false false false
|       box-sizing: content-box
|       overflow: visible
|       offset: auto auto auto auto
|       color: rgba(0, 0, 0, 255)
|       background: rgba(0, 0, 0, 0)
|       font-family: sans-serif
|       font-size: 16px
|       font-weight: 400
|       font-italic: false
|       line-height: 19.2px
|       text-align: left
|       white-space: normal
|   Block node=9
|     display: block
|     position: static
|     width: auto
|     height: auto
|     min-width: auto
|     max-width: none
|     min-height: auto
|     max-height: none
|     margin: 8px 8px 8px 8px
|     padding: 0px 0px 0px 0px
|     border-width: 0px 0px 0px 0px
|     border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|     border-solid: false false false false
|     box-sizing: content-box
|     overflow: visible
|     offset: auto auto auto auto
|     color: rgba(0, 0, 0, 255)
|     background: rgba(0, 0, 0, 0)
|     font-family: sans-serif
|     font-size: 16px
|     font-weight: 400
|     font-italic: false
|     line-height: 19.2px
|     text-align: left
|     white-space: normal
|     AnonymousBlock
|       display: block
|       position: static
|       width: auto
|       height: auto
|       min-width: auto
|       max-width: none
|       min-height: auto
|       max-height: none
|       margin: 0px 0px 0px 0px
|       padding: 0px 0px 0px 0px
|       border-width: 0px 0px 0px 0px
|       border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|       border-solid: false false false false
|       box-sizing: content-box
|       overflow: visible
|       offset: auto auto auto auto
|       color: rgba(0, 0, 0, 255)
|       background: rgba(0, 0, 0, 0)
|       font-family: sans-serif
|       font-size: 16px
|       font-weight: 400
|       font-italic: false
|       line-height: 19.2px
|       text-align: left
|       white-space: normal
|       InlineText node=10
|         display: block
|         position: static
|         width: auto
|         height: auto
|         min-width: auto
|         max-width: none
|         min-height: auto
|         max-height: none
|         margin: 8px 8px 8px 8px
|         padding: 0px 0px 0px 0px
|         border-width: 0px 0px 0px 0px
|         border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|         border-solid: false false false false
|         box-sizing: content-box
|         overflow: visible
|         offset: auto auto auto auto
|         color: rgba(0, 0, 0, 255)
|         background: rgba(0, 0, 0, 0)
|         font-family: sans-serif
|         font-size: 16px
|         font-weight: 400
|         font-italic: false
|         line-height: 19.2px
|         text-align: left
|         white-space: normal
|     Block node=11
|       display: block
|       position: static
|       width: 400px
|       height: auto
|       min-width: auto
|       max-width: none
|       min-height: auto
|       max-height: none
|       margin: 20px 10px 20px 10px
|       padding: 5px 5px 5px 5px
|       border-width: 2px 2px 2px 2px
|       border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|       border-solid: true true true true
|       box-sizing: content-box
|       overflow: visible
|       offset: auto auto auto auto
|       color: rgba(0, 0, 0, 255)
|       background: rgba(0, 0, 0, 0)
|       font-family: sans-serif
|       font-size: 16px
|       font-weight: 400
|       font-italic: false
|       line-height: 19.2px
|       text-align: left
|       white-space: normal
|       AnonymousBlock
|         display: block
|         position: static
|         width: auto
|         height: auto
|         min-width: auto
|         max-width: none
|         min-height: auto
|         max-height: none
|         margin: 0px 0px 0px 0px
|         padding: 0px 0px 0px 0px
|         border-width: 0px 0px 0px 0px
|         border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|         border-solid: false false false false
|         box-sizing: content-box
|         overflow: visible
|         offset: auto auto auto auto
|         color: rgba(0, 0, 0, 255)
|         background: rgba(0, 0, 0, 0)
|         font-family: sans-serif
|         font-size: 16px
|         font-weight: 400
|         font-italic: false
|         line-height: 19.2px
|         text-align: left
|         white-space: normal
|         InlineText node=12
|           display: block
|           position: static
|           width: 400px
|           height: auto
|           min-width: auto
|           max-width: none
|           min-height: auto
|           max-height: none
|           margin: 20px 10px 20px 10px
|           padding: 5px 5px 5px 5px
|           border-width: 2px 2px 2px 2px
|           border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|           border-solid: true true true true
|           box-sizing: content-box
|           overflow: visible
|           offset: auto auto auto auto
|           color: rgba(0, 0, 0, 255)
|           background: rgba(0, 0, 0, 0)
|           font-family: sans-serif
|           font-size: 16px
|           font-weight: 400
|           font-italic: false
|           line-height: 19.2px
|           text-align: left
|           white-space: normal
|       Block node=13
|         display: block
|         position: static
|         width: auto
|         height: 50px
|         min-width: auto
|         max-width: none
|         min-height: auto
|         max-height: none
|         margin: 16px 0px 0px 0px
|         padding: 0px 0px 0px 3px
|         border-width: 0px 0px 0px 0px
|         border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|         border-solid: false false false false
|         box-sizing: content-box
|         overflow: visible
|         offset: auto auto auto auto
|         color: rgba(0, 0, 0, 255)
|         background: rgba(0, 0, 0, 0)
|         font-family: sans-serif
|         font-size: 16px
|         font-weight: 400
|         font-italic: false
|         line-height: 19.2px
|         text-align: left
|         white-space: normal
|         InlineText node=14
|           display: block
|           position: static
|           width: auto
|           height: 50px
|           min-width: auto
|           max-width: none
|           min-height: auto
|           max-height: none
|           margin: 16px 0px 0px 0px
|           padding: 0px 0px 0px 3px
|           border-width: 0px 0px 0px 0px
|           border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|           border-solid: false false false false
|           box-sizing: content-box
|           overflow: visible
|           offset: auto auto auto auto
|           color: rgba(0, 0, 0, 255)
|           background: rgba(0, 0, 0, 0)
|           font-family: sans-serif
|           font-size: 16px
|           font-weight: 400
|           font-italic: false
|           line-height: 19.2px
|           text-align: left
|           white-space: normal
|       AnonymousBlock
|         display: block
|         position: static
|         width: auto
|         height: auto
|         min-width: auto
|         max-width: none
|         min-height: auto
|         max-height: none
|         margin: 0px 0px 0px 0px
|         padding: 0px 0px 0px 0px
|         border-width: 0px 0px 0px 0px
|         border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|         border-solid: false false false false
|         box-sizing: content-box
|         overflow: visible
|         offset: auto auto auto auto
|         color: rgba(0, 0, 0, 255)
|         background: rgba(0, 0, 0, 0)
|         font-family: sans-serif
|         font-size: 16px
|         font-weight: 400
|         font-italic: false
|         line-height: 19.2px
|         text-align: left
|         white-space: normal
|         InlineText node=15
|           display: block
|           position: static
|           width: 400px
|           height: auto
|           min-width: auto
|           max-width: none
|           min-height: auto
|           max-height: none
|           margin: 20px 10px 20px 10px
|           padding: 5px 5px 5px 5px
|           border-width: 2px 2px 2px 2px
|           border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|           border-solid: true true true true
|           box-sizing: content-box
|           overflow: visible
|           offset: auto auto auto auto
|           color: rgba(0, 0, 0, 255)
|           background: rgba(0, 0, 0, 0)
|           font-family: sans-serif
|           font-size: 16px
|           font-weight: 400
|           font-italic: false
|           line-height: 19.2px
|           text-align: left
|           white-space: normal
|       Block node=16
|         display: block
|         position: static
|         width: auto
|         height: 50px
|         min-width: auto
|         max-width: none
|         min-height: auto
|         max-height: none
|         margin: 16px 0px 0px 0px
|         padding: 0px 0px 0px 3px
|         border-width: 0px 0px 0px 0px
|         border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|         border-solid: false false false false
|         box-sizing: content-box
|         overflow: visible
|         offset: auto auto auto auto
|         color: rgba(0, 0, 0, 255)
|         background: rgba(0, 0, 0, 0)
|         font-family: sans-serif
|         font-size: 16px
|         font-weight: 400
|         font-italic: false
|         line-height: 19.2px
|         text-align: left
|         white-space: normal
|         InlineText node=17
|           display: block
|           position: static
|           width: auto
|           height: 50px
|           min-width: auto
|           max-width: none
|           min-height: auto
|           max-height: none
|           margin: 16px 0px 0px 0px
|           padding: 0px 0px 0px 3px
|           border-width: 0px 0px 0px 0px
|           border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|           border-solid: false false false false
|           box-sizing: content-box
|           overflow: visible
|           offset: auto auto auto auto
|           color: rgba(0, 0, 0, 255)
|           background: rgba(0, 0, 0, 0)
|           font-family: sans-serif
|           font-size: 16px
|           font-weight: 400
|           font-italic: false
|           line-height: 19.2px
|           text-align: left
|           white-space: normal
|       AnonymousBlock
|         display: block
|         position: static
|         width: auto
|         height: auto
|         min-width: auto
|         max-width: none
|         min-height: auto
|         max-height: none
|         margin: 0px 0px 0px 0px
|         padding: 0px 0px 0px 0px
|         border-width: 0px 0px 0px 0px
|         border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|         border-solid: false false false false
|         box-sizing: content-box
|         overflow: visible
|         offset: auto auto auto auto
|         color: rgba(0, 0, 0, 255)
|         background: rgba(0, 0, 0, 0)
|         font-family: sans-serif
|         font-size: 16px
|         font-weight: 400
|         font-italic: false
|         line-height: 19.2px
|         text-align: left
|         white-space: normal
|         InlineText node=18
|           display: block
|           position: static
|           width: 400px
|           height: auto
|           min-width: auto
|           max-width: none
|           min-height: auto
|           max-height: none
|           margin: 20px 10px 20px 10px
|           padding: 5px 5px 5px 5px
|           border-width: 2px 2px 2px 2px
|           border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|           border-solid: true true true true
|           box-sizing: content-box
|           overflow: visible
|           offset: auto auto auto auto
|           color: rgba(0, 0, 0, 255)
|           background: rgba(0, 0, 0, 0)
|           font-family: sans-serif
|           font-size: 16px
|           font-weight: 400
|           font-italic: false
|           line-height: 19.2px
|           text-align: left
|           white-space: normal
|     AnonymousBlock
|       display: block
|       position: static
|       width: auto
|       height: auto
|       min-width: auto
|       max-width: none
|       min-height: auto
|       max-height: none
|       margin: 0px 0px 0px 0px
|       padding: 0px 0px 0px 0px
|       border-width: 0px 0px 0px 0px
|       border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|       border-solid: false false false false
|       box-sizing: content-box
|       overflow: visible
|       offset: auto auto auto auto
|       color: rgba(0, 0, 0, 255)
|       background: rgba(0, 0, 0, 0)
|       font-family: sans-serif
|       font-size: 16px
|       font-weight: 400
|       font-italic: false
|       line-height: 19.2px
|       text-align: left
|       white-space: normal
|       InlineText node=19
|         display: block
|         position: static
|         width: auto
|         height: auto
|         min-width: auto
|         max-width: none
|         min-height: auto
|         max-height: none
|         margin: 8px 8px 8px 8px
|         padding: 0px 0px 0px 0px
|         border-width: 0px 0px 0px 0px
|         border-color: rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255) rgba(0, 0, 0, 255)
|         border-solid: false false false false
|         box-sizing: content-box
|         overflow: visible
|         offset: auto auto auto auto
|         color: rgba(0, 0, 0, 255)
|         background: rgba(0, 0, 0, 0)
|         font-family: sans-serif
|         font-size: 16px
|         font-weight: 400
|         font-italic: false
|         line-height: 19.2px
|         text-align: left
|         white-space: normal
